--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Login_Todo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">   
@@ -71,12 +71,12 @@
                 
                 <div id="name">
                     <label>Name:</label>
-                    <input type="text" id="name" placeholder="Name">
+                    <input type="text" id="nme" placeholder="Name">
                 </div>
                 
                 <div id="passwrd">
                     <label>Password:</label>
-                    <input type="text" id="passwoord" placeholder="password" >
+                    <input type="password" id="passwoord" placeholder="password" >
                 </div>
                 <div id="Pro">
                     <label>Profession:</label>
@@ -116,6 +116,7 @@
 
 
     <script type="module" src="app.js"></script>
+    <script type="module" src="user.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
