--- a/user.html
+++ b/user.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+
+  <button type="button" id="logout" class="btn btn-outline-success m-1">Logout</button>
   
   
     <h1 class="text-center mt-2 text-success">User Profile</h1>
@@ -22,7 +24,7 @@
             </div>
            <div class="userdetail">
 
-               <h3 class=" mt-3 mx-4" id="name">KAMRAN ALI </h3>
+               <h3 class=" mt-3 mx-4" id="myname"> </h3>
                 <p class="text-center lead" id="passion">Web Developer</p>
             </div>
         </div>
@@ -48,9 +50,6 @@
       
                   <button type="submit" class="btn btn-success">Update</button>
 
-
-
-
         </div>
     </div>
 
@@ -74,5 +73,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+
+  <script type="module" src="user.js"></script>
 </body>
 </html>
