--- a/user.html
+++ b/user.html
@@ -24,8 +24,11 @@
             </div>
            <div class="userdetail">
 
-               <h3 class=" mt-3 mx-4" id="myname"> </h3>
-                <p class="text-center lead" id="passion">Web Developer</p>
+               <h3 class=" mt-3 mx-4" id="myemail"> Email :</h3>
+               <h3 class=" mt-3 mx-4" id="myname"> Name :</h3>
+               <h3 class=" mt-3 mx-4" id="myprofesion"> Profession :</h3>
+
+                <!-- <p class="text-center lead" id="passion">Web Developer</p> -->
             </div>
         </div>
         
